c2prj1_cards/grade.txt
Grading at Tue Jan 14 21:02:53 UTC 2020
Compiling cards.c
cards.c: In function ‘card_from_num’:
cards.c:103:10: error: unused variable ‘temp’ [-Werror=unused-variable]
   card_t temp;
          ^
cards.c: At top level:
cards.c:135:3: error: expected identifier or ‘(’ before ‘return’
   return temp;
   ^
cards.c:136:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
cards.c: In function ‘card_from_num’:
cards.c:134:8: error: control reaches end of non-void function [-Werror=return-type]
   //*/ }
        ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
